fixed wierd flickering

--- a/style.css
+++ b/style.css
@@ -1372,19 +1372,21 @@ input:valid {
   transform: translateX(-50%);
   display: none;
   z-index: -1;
+  pointer-events: none;
 }
 .message-container.active {
   bottom: -5rem;
   display: flex;
   animation: showMessage 0.5s ease-in-out forwards;
 }
+
 @keyframes showMessage {
   0% {
-    display: none;
+    /* display: none; */
     bottom: 10rem;
   }
   100% {
-    display: flex;
+    /* display: flex; */
     bottom: -5rem;
   }
 }
